@@ -5,6 +5,8 @@ Changes for Crate-Java-Testing
 Unreleased
 ==========
 
+ * Add support to start a test cluster from "latest" placeholder urls.
+
 2018/04/24 0.6.2
 ================
 
